Pug code having some bugs

--- a/00-starting-setup/views/add-product.pug
+++ b/00-starting-setup/views/add-product.pug
@@ -4,10 +4,6 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle}
-        link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="/css/product.css")
-        link(rel="stylesheet", href="/css/forms.css")
-
     body
         header.main-header
             nav.main-header_nav
@@ -18,7 +14,7 @@ html(lang="en")
                         a.active(href="/admin/add-product") Add Product
 
         main
-            .roduct-form(action="/admin/add-product", method="POST")
+            form.roduct-form(action="/admin/add-product", method="POST")
                 .form-control
                     label(for="title") Title
                     input(type="text", name="title") #title
