Handlebar for index page added.

--- a/WebServer/views/index.hbs
+++ b/WebServer/views/index.hbs
@@ -7,7 +7,7 @@
     <title>Weather app</title>
   </head>
   <body>
-    <h1>From a static file!</h1>
+    <h1>HBS Weather</h1>
     <img src="/img/Yoda.jpeg">
   </body>
 </html>
