--- a/WebServer/views/about.hbs
+++ b/WebServer/views/about.hbs
@@ -3,9 +3,9 @@
   <head>
     <link rel="stylesheet" href="/css/styles.css">
     <meta charset="utf-8">
-    <title>About</title>
+    <title>{{title}}</title>
   </head>
   <body>
-    <h1>About page from server</h1>
+    <h1>{{head}}</h1>
   </body>
 </html>
