--- a/WebServer/views/index.hbs
+++ b/WebServer/views/index.hbs
@@ -4,10 +4,11 @@
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"></script>
     <meta charset="utf-8">
-    <title>Weather app</title>
+    <title>{{title}}</title>
   </head>
   <body>
     <h1>HBS Weather</h1>
+    <h3>{{name}}</h3>
     <img src="/img/Yoda.jpeg">
   </body>
 </html>
