--- a/WebServer/templates/views/about.hbs
+++ b/WebServer/templates/views/about.hbs
@@ -2,13 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
     <meta charset="utf-8">
     <title>{{title}}</title>
   </head>
   <body>
-    <h1>HBS Weather</h1>
-    <h3>{{name}}</h3>
-    <img src="/img/Yoda.jpeg">
+    {{>header}}
+    <h1>{{head}}</h1>
+    {{>footer}}
   </body>
 </html>
