--- a/WebServer/templates/views/help.hbs
+++ b/WebServer/templates/views/help.hbs
@@ -3,9 +3,12 @@
   <head>
     <link rel="stylesheet" href="/css/styles.css">
     <meta charset="utf-8">
-    <title>About</title>
+    <title>{{title}}</title>
   </head>
   <body>
-    <h1>About page from static</h1>
+    {{>header}}
+    <h1>{{head}}</h1>
+    <p>{{message}}</p>
+    {{>footer}}
   </body>
 </html>
