--- a/WebServer/templates/views/404.hbs
+++ b/WebServer/templates/views/404.hbs
@@ -6,8 +6,10 @@
     <title>{{header}}</title>
   </head>
   <body>
-    {{>header}}
-    <h1>{{message}}</h1>
+    <div class="main-content">
+      {{>header}}
+      <h1>{{message}}</h1>
+    </div>
     {{>footer}}
   </body>
 </html>
