--- a/WebServer/templates/views/help.hbs
+++ b/WebServer/templates/views/help.hbs
@@ -6,9 +6,11 @@
     <title>{{title}}</title>
   </head>
   <body>
-    {{>header}}
-    <h1>{{head}}</h1>
-    <p>{{message}}</p>
+    <div class="main-content">
+      {{>header}}
+      <h1>{{head}}</h1>
+      <p>{{message}}</p>
+    </div>
     {{>footer}}
   </body>
 </html>
