--- a/WebServer/templates/views/index.hbs
+++ b/WebServer/templates/views/index.hbs
@@ -7,10 +7,12 @@
     <title>{{title}}</title>
   </head>
   <body>
-    {{>header}}
-    <h1>HBS Weather</h1>
-    <h3>{{name}}</h3>
-    <img src="/img/Yoda.jpeg">
+    <div class="main-content">
+      {{>header}}
+      <h1>HBS Weather</h1>
+      <h3>{{name}}</h3>
+      <img class="portrait" src="/img/Yoda.jpeg">
+    </div>
     {{>footer}}
   </body>
 </html>
