--- a/WebServer/public/css/styles.css
+++ b/WebServer/public/css/styles.css
@@ -1,15 +1,14 @@
 h1 {
-  color: green;
+  color: black;
   font-family: arial;
   font-size: 50px;
   max-width: 650px;
   margin-left: 25px;
-  /* margin: 0 auto; */
   padding: 0 16px;
 }
 
 h3 {
-  color: red;
+  color: gray;
   font-family: arial;
   max-width: 350px;
   /* margin: 0 auto; */
@@ -33,7 +32,7 @@ body {
 }
 
 p {
-  color: blue;
+  color: gray;
   font-family: arial;
   /* max-width: 50px; */
   /* margin: 0 auto; */
