--- a/WebServer/templates/views/about.hbs
+++ b/WebServer/templates/views/about.hbs
@@ -8,7 +8,7 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <h1>{{head}}</h1>
+      <p>This page is for about!!</p>
     </div>
     {{>footer}}
   </body>
