--- a/WebServer/public/css/styles.css
+++ b/WebServer/public/css/styles.css
@@ -11,7 +11,6 @@ h3 {
   color: gray;
   font-family: arial;
   max-width: 350px;
-  /* margin: 0 auto; */
   margin-left: 25px;
 }
 
@@ -34,16 +33,8 @@ body {
 p {
   color: gray;
   font-family: arial;
-  /* max-width: 50px; */
-  /* margin: 0 auto; */
   margin-left: 25px;
 }
-
-/* img {
-  width: 250px;
-  height: 250px;
-  margin: 25px;
-} */
 
 .portrait {
   width: 250px;
@@ -66,9 +57,21 @@ header a {
 footer {
   color: #888888;
   border-top: 1px solid red;
-  /* background: #333333; */
   margin-top: 16px;
   margin: 16px;
   padding: 8px;
 
+}
+
+input {
+  border: 1px solid #cccccc;
+  padding: 8px;
+}
+
+button {
+  cursor: pointer;
+  border: 1px solid #888888;
+  background: #888888;
+  color: white;
+  padding: 8px;
 }
