--- a/WebServer/templates/views/index.hbs
+++ b/WebServer/templates/views/index.hbs
@@ -2,14 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
     <meta charset="utf-8">
     <title>{{title}}</title>
   </head>
   <body>
     <div class="main-content">
       {{>header}}
+      <p>Use this site to get your weather!</p>
+
+      <form>
+        <input placeholder="Location">
+        <button>Search</button>
+      </form>
+
+      <p id="message1"></p>
+      <p id="message2"></p>
       </div>
     {{>footer}}
+    <script src="/js/app.js"></script>
   </body>
 </html>
